--- a/TicTacToeDemo/src/main/res/layout/activity_main.xml
+++ b/TicTacToeDemo/src/main/res/layout/activity_main.xml
@@ -12,9 +12,31 @@
         android:layout_height="fill_parent"
         android:layout_gravity="left|top">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/xScore" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/oScore" />
+
+        </LinearLayout>
+
         <TableLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="wrap_content"
+            android:layout_weight="10">
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -54,7 +76,6 @@
                     android:text="4"
                     android:id="@+id/button4"
                     android:layout_weight="10"/>
-
 
                 <Button
                     android:layout_width="wrap_content"
@@ -99,6 +120,25 @@
             </TableRow>
 
         </TableLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Game"
+                android:id="@+id/newGame" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reset"
+                android:id="@+id/reset" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
